...
import org.thoughtcrime.securesms.main.MainNavigationViewModel
import org.thoughtcrime.securesms.service.webrtc.links.CallLinkRoomId
import org.thoughtcrime.securesms.sharing.v2.ShareActivity
import org.thoughtcrime.securesms.util.CommunicationActions

internal const val CALL_LINK_DETAILS_SCREEN_TAG = "call-link:details"
internal const val CALL_LINK_DETAILS_NAME_TAG = "call-link:details:name"
internal const val CALL_LINK_DETAILS_APPROVAL_TAG = "call-link:details:approval"
internal const val CALL_LINK_DETAILS_SHARE_SIGNAL_TAG = "call-link:details:share-signal"
internal const val CALL_LINK_DETAILS_COPY_TAG = "call-link:details:copy"
internal const val CALL_LINK_DETAILS_SHARE_TAG = "call-link:details:share"
internal const val CALL_LINK_DETAILS_DELETE_TAG = "call-link:details:delete"
internal const val CALL_LINK_DETAILS_CONFIRMATION_TAG = "call-link:details:delete-confirmation"

@Immutable
data class CallLinkDetailsLightState(
  val call: SignalCallRowState? = null,
  val canModify: Boolean = false,
  val approvalRequired: Boolean = false,
...
