...

    <!-- First placeholder is productId, second placeholder is app package -->
    <string name="backup_subscription_management_url">https://play.google.com/store/account/subscriptions?sku=%1$s&amp;package=%2$s</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait…</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>

    <!-- Alternate label for the Signal Application in the device\'s home screen launcher, as in a weather/climate application. -->
    <string name="app_icon_label_weather">Weather</string>
...
    <string mollyify="true" name="ConversationFragment__update_build">Update Molly</string>
    <!-- Action shown to allow a user to re-register as they are no longer registered -->
    <string mollyify="true" name="ConversationFragment__reregister_signal">Re-register Molly</string>
    <!-- Action shown in the conversation input area to allow a user to re-link this device as it is no longer linked -->
    <string name="ConversationFragment__relink_signal">Re-link</string>
    <!-- Label for a button displayed in the conversation toolbar to return to the previous screen. -->
    <string name="ConversationFragment__content_description_back_button">Navigate back.</string>
    <!-- Label for a button displayed in the conversation toolbar to open the main screen of the app. -->
    <string mollyify="true" name="ConversationFragment__content_description_launch_signal_button">Open Molly</string>
    <!-- Dialog title shown when more than one contact in a group conversation is no longer verified -->
    <string name="ConversationFragment__no_longer_verified">No longer verified</string>
    <!-- Button shown in conversation header when in a message request state and no groups in common to show new message safety tips -->
    <string name="ConversationFragment_safety_tips">Safety tips</string>
...
    <string name="CreateCallLinkBottomSheetDialogFragment__share_link_via_signal">Share link via Signal</string>
    <!-- Row label to copy the link to the clipboard -->
    <string name="CreateCallLinkBottomSheetDialogFragment__copy_link">Copy link</string>
    <!-- Row label to share the link with the external share sheet -->
    <string name="CreateCallLinkBottomSheetDialogFragment__share_link">Share link</string>
    <!-- Button text to dismiss the sheet and add it as an upcoming call -->
    <string name="CreateCallLinkBottomSheetDialogFragment__done">Done</string>
    <!-- Displayed when we can\'t find a suitable way to open the system share picker -->
    <string name="CreateCallLinkBottomSheetDialogFragment__failed_to_open_share_sheet">Unable to share call link.</string>
    <!-- Displayed when we copy the call link to the clipboard -->
    <string name="CreateCallLinkBottomSheetDialogFragment__copied_to_clipboard">Copied to clipboard</string>

    <!-- CallLinkIncomingRequestSheet -->
...
    <string name="CallLinkIncomingRequestSheet__deny_entry">Deny entry</string>

    <!-- EditCallLinkNameDialogFragment -->
    <!-- App bar title for editing a call name -->
    <string name="EditCallLinkNameDialogFragment__edit_call_name">Edit call name</string>
    <!-- Text on button to confirm edit -->
    <string name="EditCallLinkNameDialogFragment__save">Save</string>
    <!-- Placeholder text on input field when editing call name -->
    <string name="EditCallLinkNameDialogFragment__call_name">Call name</string>

    <!-- ChooseNavigationBarStyleFragment -->
    <!-- Dialog title, displayed below the header image -->
    <string name="ChooseNavigationBarStyleFragment__navigation_bar_size">Navigation bar size</string>
...
